# Janan-Electricity-Database

./: Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.md  schema.sql  sources.yaml
apps/api/: main.py
apps/api/repositories/: __init__.py  timeseries_repository.py
apps/api/routes/: generation_unit.py  intertie_flow.py  intraday.py  reserve_ratio.py  spot.py  trunk_flow.py
apps/api/services/: __init__.py  query_service.py
collectors/: __init__.py  base.py  jepx_intraday.py  jepx_spot.py  occto_generation.py  occto_intertie.py  occto_reserve.py  occto_trunk.py
docs/: architecture.md  assumptions.md  runbook.md
loaders/: __init__.py  db.py
parsers/: __init__.py  common.py  jepx_intraday.py  jepx_spot.py  occto_generation.py  occto_intertie.py  occto_reserve.py  occto_trunk.py
pipelines/: ingest.py  init_db.py
sql/: upsert_dim_asset.sql  upsert_dim_market.sql  upsert_fact_generation_unit_30m.sql  upsert_fact_intertie_flow_5m.sql  upsert_fact_intraday_30m.sql  upsert_fact_reserve_ratio_30m.sql  upsert_fact_spot_30m.sql  upsert_fact_trunk_flow_30m.sql  upsert_snapshot.sql
tests/: conftest.py  test_api_grid.py  test_api_market.py  test_db_loader.py  test_parsers.py  test_validators.py
tests/fixtures/golden/: jepx_spot_2025_04_01.json
tests/fixtures/raw/: jepx_intraday_sample.csv  jepx_spot_sample.csv
validators/: common.py  config.py
